<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main" >
   
   	<TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />
   	
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center_horizontal|center_vertical" 
        android:layout_marginTop="40dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/b00"
                android:text="@string/table_label00" 
                android:drawableTop="@drawable/ic_contact"
                android:background="@drawable/square_blue_light"
                android:textColor="#ffffff"
                
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="20dp"
                />

            <Button
                android:id="@+id/b01"
                android:layout_width="150dp"
                android:background="@drawable/square_red_light"
                android:drawableTop="@drawable/ic_customize"
                android:textColor="#ffffff"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:text="@string/table_label01"
                />
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/b10"
                android:text="@string/table_label10"
                android:drawableTop="@drawable/ic_recent"  
                android:background="@drawable/square_yellow_light"    
                android:textColor="#ffffff"         
                android:layout_width="150dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="20dp"
                android:layout_marginLeft="-3dip"
   				android:layout_marginRight="-3dip"/>

            <Button
                android:id="@+id/b11"
                android:layout_width="150dp"
                android:background="@drawable/square_green_light"
                android:textColor="#ffffff"
                android:drawableTop="@drawable/ic_record"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:text="@string/table_label11"
                android:layout_marginLeft="-3dip"
    android:layout_marginRight="-3dip" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>
    </TableLayout>

</LinearLayout>